--- a/slb-earnings-call-podcast/requirements.txt
+++ b/slb-earnings-call-podcast/requirements.txt
@@ -1,2 +1,6 @@
-feedgen
-pytz
+feedgen==0.9.0
+pytz==2022.6
+## The following requirements were added by pip freeze:
+lxml==4.9.1
+python-dateutil==2.8.2
+six==1.16.0
